--- a/app/src/main/assets/startpage.html
+++ b/app/src/main/assets/startpage.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>
-		
 	</title>
 </head>
 <body>
-	<h1>pidr</h1>
+	<p align="center" style="color:#ff0099; font-size:60px">
+		Intercom
+	</p>
 </body>
 </html>
